  * Added example to the gallery using sanitizing headings and row
    names to produce large bold headings and italic row names.
  * Added code from Martin Gubri, martin.gubri@framasoft.org, to produce
    tables from the spatial econometrics packages, spdep, splm, and
    sphet.
  * Extracted sanitize functions from print.xtable as stand-alone
    functions, and exported them.
  * Added option to produce math style exponents when sanitizing
    numbers, as suggested by Don Armstrong (don@donarmstrong.com), who
    also provided code
  * Fixed bug #6907. Warning was created when the data frame as no
    rows for type is 'html'. Added a test to create the matrix
    requested specially in that case. Original code was
    BTD2 <- matrix(align.tmp[(2-pos):(ncol(x)+1)],
                   nrow = nrow(x), ncol = ncol(x)+pos, byrow = TRUE)
    which created a matrix with no rows, but gave a warning when
    there were no rows in the data frame being processed.
  * Fixed bug #6260. Accepted the change suggested by Claudius
    Loehnert, which was to replace { and } by \begingroup and
    \endgroup respectively as the delimiters when size was to changed
    in a table.


1.8-0
  * autoformat, xalign, xdigits, xdisplay from Arni Magnusson, added
    along with help file. Feature request #5686.
  * New argument 'auto' in xtable(), to call xalign, xdigits, and
    xdisplay at the time when xtable is created.
  * Updated xtableGallery vignette, now with TOC and revised examples.

1.7-4 (2014-09-11)
  * Changed tags in HTML to be all lower case, to be compatible with
    HTML5, part of feature request. (#5879)
  * Fixed booktabs bug (#2309), more of an enhancement really. Updated
    xtableGallery.snw to illustrate the change.

1.7-3 (2014-03-06)
  * Dealt with format.args bug (#4770). No code changes, but the
    documentation of print.xtable was changed to warn of the problem
    and to give a workaround as an example.

1.7-1 (2013-02-24)
  * Fixed logicals bug. (Req #1911)