@@ -7,9 +7,11 @@
     tables from the spatial econometrics packages, spdep, splm, and
     sphet.
   * Extracted sanitize functions from print.xtable as stand-alone
-    functions, and exported them.
+    functions, and exported them. Added helper functions as.is and
+    as.math for assistance with sanitization (supplied by Stefan
+    Edwards <sme@iysik.com> in Feature Request #5303).
   * Added option to produce math style exponents when sanitizing
-    numbers, as suggested by Don Armstrong (don@donarmstrong.com), who
+    numbers, as suggested by Don Armstrong <don@donarmstrong.com>, who
     also provided code
   * Fixed bug #6907. Warning was created when the data frame as no
     rows for type is 'html'. Added a test to create the matrix
@@ -22,7 +24,13 @@
     Loehnert, which was to replace { and } by \begingroup and
     \endgroup respectively as the delimiters when size was to changed
     in a table.
-
+  * Added functions xtableList and print.xtableList to produce
+    composite tables consisting of a number of subtables.
+  * Added xtableFtable and print.xtableFtable to format flat tables
+    produced by ftable. Included examples in the xtable gallery.
+  * Produced new vignettes: 'The xtableList Gallery' to illustrate
+    xtableList and print.xtableList; and 'The Other Packages Gallery'
+    to illustrate methods for classes of objects from other packages.
 
 1.8-0
   * autoformat, xalign, xdigits, xdisplay from Arni Magnusson, added
